--- a/Movies-ETL-Notebook.ipynb
+++ b/Movies-ETL-Notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "169fc162",
+   "id": "551a6672",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fc497412",
+   "id": "d906d153",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "edb2921a",
+   "id": "b0d81920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a76700f4",
+   "id": "8805a843",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b4c2a027",
+   "id": "9c3a2f57",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5a0f6cd8",
+   "id": "00fe45a4",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0234088e",
+   "id": "7751a0ce",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "20cb4fe6",
+   "id": "189c34f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4737e56a",
+   "id": "47f6c7d4",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5cfb063f",
+   "id": "b351a6d6",
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ddc76f14",
+   "id": "83e8d3d1",
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e004ccb0",
+   "id": "c7b85a75",
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a7a083f5",
+   "id": "c4725f8e",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "55b6a8a5",
+   "id": "8ee3a038",
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "96a2d804",
+   "id": "76565319",
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3f25436b",
+   "id": "c109b489",
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1962,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "08ecf605",
+   "id": "9088b0e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1976,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "84a0fbf3",
+   "id": "54dcdf98",
    "metadata": {},
    "outputs": [
     {
@@ -2216,7 +2216,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "03cd92e4",
+   "id": "27246695",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2226,7 +2226,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "76675952",
+   "id": "92c8acc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2238,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "16423b52",
+   "id": "eb4a1f27",
    "metadata": {},
    "outputs": [
     {
@@ -2262,7 +2262,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "10343eb0",
+   "id": "fa690cb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2290,7 +2290,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8d2161e6",
+   "id": "f0a0debf",
    "metadata": {},
    "outputs": [
     {
@@ -2367,8 +2367,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "id": "410e4efc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Changing Column Names added to our clean_movie function\n",
+    "#Step 1: Make an empty dict to hld all of th ealternative titles\n",
+    "def clean_movie(movie):\n",
+    "    movie = dict(movie) #create a non-destructive copy\n",
+    "    alt_titles = {} #This is step 1\n",
+    "    #Step 2: Loop through alternative title keys\n",
+    "    for key in ['Also known as','Arabic','Cantonese','Chinese','French',\n",
+    "                'Hangul','Hebrew','Hepburn','Japanese','Literally',\n",
+    "                'Mandarin','McCune–Reischauer','Original title','Polish',\n",
+    "                'Revised Romanization','Romanized','Russian',\n",
+    "                'Simplified','Traditional','Yiddish']:\n",
+    "        #Check if the current key exists in the movie object\n",
+    "        if key in movie:\n",
+    "            alt_titles[key] = movie[key]\n",
+    "            movie.pop(key)\n",
+    "    #After Looping through every key, add th ealternative titles dict to the movie object\n",
+    "    if len(alt_titles) > 0:\n",
+    "        movie['alt_titles'] = alt_titles\n",
+    "        \n",
+    "    def change_column_name(old_name, new_name):\n",
+    "        if old_name in movie:\n",
+    "            movie[new_name] = movie.pop(old_name)\n",
+    "    change_column_name('Adaptation by', 'Writer(s)')\n",
+    "    change_column_name('Country of origin', 'Country')\n",
+    "    change_column_name('Directed by', 'Director')\n",
+    "    change_column_name('Distributed by', 'Distributor')\n",
+    "    change_column_name('Edited by', 'Editor(s)')\n",
+    "    change_column_name('Length', 'Running time')\n",
+    "    change_column_name('Original release', 'Release date')\n",
+    "    change_column_name('Music by', 'Composer(s)')\n",
+    "    change_column_name('Produced by', 'Producer(s)')\n",
+    "    change_column_name('Producer', 'Producer(s)')\n",
+    "    change_column_name('Productioncompanies ', 'Production company(s)')\n",
+    "    change_column_name('Productioncompany ', 'Production company(s)')\n",
+    "    change_column_name('Released', 'Release Date')\n",
+    "    change_column_name('Release Date', 'Release date')\n",
+    "    change_column_name('Screen story by', 'Writer(s)')\n",
+    "    change_column_name('Screenplay by', 'Writer(s)')\n",
+    "    change_column_name('Story by', 'Writer(s)')\n",
+    "    change_column_name('Theme music composer', 'Composer(s)')\n",
+    "    change_column_name('Written by', 'Writer(s)')\n",
+    "        \n",
+    "    return movie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "353f751e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Animation by',\n",
+       " 'Audio format',\n",
+       " 'Based on',\n",
+       " 'Box office',\n",
+       " 'Budget',\n",
+       " 'Cinematography',\n",
+       " 'Color process',\n",
+       " 'Composer(s)',\n",
+       " 'Country',\n",
+       " 'Created by',\n",
+       " 'Director',\n",
+       " 'Distributor',\n",
+       " 'Editor(s)',\n",
+       " 'Executive producer(s)',\n",
+       " 'Followed by',\n",
+       " 'Genre',\n",
+       " 'Label',\n",
+       " 'Language',\n",
+       " 'Narrated by',\n",
+       " 'Original language(s)',\n",
+       " 'Original network',\n",
+       " 'Picture format',\n",
+       " 'Preceded by',\n",
+       " 'Producer(s)',\n",
+       " 'Production company(s)',\n",
+       " 'Production location(s)',\n",
+       " 'Recorded',\n",
+       " 'Release date',\n",
+       " 'Running time',\n",
+       " 'Starring',\n",
+       " 'Suggested by',\n",
+       " 'Venue',\n",
+       " 'Voices of',\n",
+       " 'Writer(s)',\n",
+       " 'alt_titles',\n",
+       " 'imdb_link',\n",
+       " 'title',\n",
+       " 'url',\n",
+       " 'year']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#checking on our new list\n",
+    "clean_movies = [clean_movie(movie) for movie in wiki_movies]\n",
+    "wiki_movies_df = pd.DataFrame(clean_movies)\n",
+    "sorted(wiki_movies_df.columns.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "094e0c0f",
+   "id": "53ceeacd",
    "metadata": {},
    "outputs": [],
    "source": []
